--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ function getMobileOperatingSystem() {
 function DetectAndServe(){
     let os = getMobileOperatingSystem();
     if (os == "Android") {
-        window.location.href = "https://forms.gle/jEB4PeT6wbq9umq36"; 
+        window.location.href = ""; 
     } else if (os == "iOS") {
-        window.location.href = "https://testflight.apple.com/join/sOkbTW4C";
+        window.location.href = "";
     } else {
-        window.location.href = "https://forms.gle/jEB4PeT6wbq9umq36";
+        window.location.href = "https://github.com/itsmichaelyu/cardFlashBugs";
     }
 }
 </script>
