--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ function getMobileOperatingSystem() {
 function DetectAndServe(){
     let os = getMobileOperatingSystem();
     if (os == "Android") {
-        window.location.href = ""; 
+        window.location.href = "https://github.com/itsmichaelyu/cardFlashBugs"; 
     } else if (os == "iOS") {
-        window.location.href = "";
+        window.location.href = "https://apps.apple.com/app/id6443405970";
     } else {
         window.location.href = "https://github.com/itsmichaelyu/cardFlashBugs";
     }
