--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function getMobileOperatingSystem() {
 function DetectAndServe(){
     let os = getMobileOperatingSystem();
     if (os == "Android") {
-        window.location.href = "https://github.com/itsmichaelyu/cardFlashBugs"; 
+        window.location.href = "https://play.google.com/store/apps/details?id=com.michaelyu.cardFlash"; 
     } else if (os == "iOS") {
         window.location.href = "https://apps.apple.com/app/id6443405970";
     } else {
